--- a/src/ScriptCs.Launcher.Wpf/ScriptCs.Launcher.Wpf.csproj
+++ b/src/ScriptCs.Launcher.Wpf/ScriptCs.Launcher.Wpf.csproj
@@ -55,6 +55,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ScriptList\ScriptInfo.cs" />
+    <Compile Include="Helpers\ViewModelBase.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
