--- a/src/ScriptCs.Launcher.Wpf/ScriptCs.Launcher.Wpf.csproj
+++ b/src/ScriptCs.Launcher.Wpf/ScriptCs.Launcher.Wpf.csproj
@@ -49,12 +49,19 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="YamlDotNet, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\YamlDotNet.4.0.0\lib\net35\YamlDotNet.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AppController.cs" />
+    <Compile Include="Helpers\FileHelpers.cs" />
+    <Compile Include="ScriptList\ApplicationVM.cs" />
     <Compile Include="ScriptList\ScriptInfo.cs" />
     <Compile Include="Helpers\ViewModelBase.cs" />
     <Page Include="MainWindow.xaml">
@@ -88,6 +95,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
