Allows executing many programs at once

--- a/src/ScriptCs.Launcher.Wpf/ScriptCs.Launcher.Wpf.csproj
+++ b/src/ScriptCs.Launcher.Wpf/ScriptCs.Launcher.Wpf.csproj
@@ -64,8 +64,10 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AppController.cs" />
+    <Compile Include="Converters\InverseBooleanConverter.cs" />
     <Compile Include="Helpers\FileHelpers.cs" />
     <Compile Include="ScriptList\ApplicationVM.cs" />
+    <Compile Include="ScriptList\ExecutionHost.cs" />
     <Compile Include="ScriptList\ScriptInfo.cs" />
     <Compile Include="Helpers\ViewModelBase.cs" />
     <Page Include="MainWindow.xaml">
