--- a/src/ScriptCs.Launcher.Wpf/ScriptCs.Launcher.Wpf.csproj
+++ b/src/ScriptCs.Launcher.Wpf/ScriptCs.Launcher.Wpf.csproj
@@ -64,7 +64,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AppController.cs" />
-    <Compile Include="Converters\InverseBooleanConverter.cs" />
+    <Compile Include="Converters\Converters.cs" />
     <Compile Include="Helpers\FileHelpers.cs" />
     <Compile Include="ScriptList\ApplicationVM.cs" />
     <Compile Include="ScriptList\ExecutionHost.cs" />
